# connect-remote

./: .gitignore  DECISIONS-LOG.md  PRIVACY.md  README.md  Untitled Diagram.drawio  _config.yml  docker-compose.yml  index.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: climate_units.py  config.py  main.py  rate_limit.py  redact.py  session_cache.py  shape_capture.py
backend/app/providers/: base.py  genesis.py
backend/scripts/: dump_fields.py
backend/tests/: test_api.py  test_climate_units.py  test_genesis_provider.py  test_powertrain.py  test_session_cache.py  test_shape_capture.py  test_ws.py
backend/tests/fixtures/: README.md
deploy/: Caddyfile  README.md  server-setup.sh
glasses-app/: README.md  app.hyundai.json  app.json  app.kia.json  index.html  package-lock.json  package.json  vite.config.ts
glasses-app/src/: api.ts  arrow-frames.ts  brand.ts  direction.ts  display.test.ts  display.ts  finder-engine.test.ts  finder-engine.ts  finder-socket.ts  finder-watch.test.ts  finder-watch.ts  finder.test.ts  finder.ts  geo.ts  glasses-input.test.ts  glasses-input.ts  location-permission.test.ts  location-permission.ts  main.ts  radar.test.ts  radar.ts  settings.test.ts  settings.ts  vite-env.d.ts
scripts/: fake_backend.py
